@@ -1,3 +1,5 @@
+Aug 08 2002  2.5.2  More fixes to the expat include order to eliminate errors
+                     on some systems.
 Aug 07 2002  2.5.2  More speech changes
 Aug 06 2002  2.5.2  Fixed preprocessor problem in pcapsource.cc
                     Maybe fixed speech
